* Added back the deletion methods for ease in local debugging * Added global exception handling * Fixed issue with environment variables not being fetched because the variables were static * Changed architecture to add an id in the data for ease of access